--- a/04Animation/index.html
+++ b/04Animation/index.html
@@ -23,8 +23,8 @@
         material="src: #wood"
         shadow 
         animation="property: rotation; 
-                   to: 90 360 180; 
-                   dur: 2000; 
+                   to: -90 -360 -180; 
+                   dur: 1000; 
                    easing: linear; 
                    loop: true" >
       </a-box>
@@ -44,7 +44,12 @@
         height="100" 
         color="#7BC8A4" 
         material="src: #grass; repeat: 10 10"
-        shadow>
+        shadow
+        animation="property: rotation; 
+                   to: 75 -360 150; 
+                   dur: 1000; 
+                   easing: linear; 
+                   loop: true" >
       </a-plane> 
     </a-scene>
   </body>
