--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -17,13 +17,13 @@
 
       <a-camera>
         <a-entity id="mouseCursor"
-          cursor="fuse: true; fuseTimeout: 1500">
+          cursor="fuse: true; fuseTimeout: 300">
         </a-entity>
         <a-ring id="cursorRing" 
           position="0 0 -1"
-          radius-inner= "0.02"
-          radius-outer= "0.03"
-          material="color: red; shader: flat">
+          radius-inner= "0.01"
+          radius-outer= "0.02"
+          material="color: purple; shader: bold">
         </a-ring>
       </a-camera>
       
