--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -23,7 +23,7 @@
           position="0 0 -1"
           radius-inner= "0.01"
           radius-outer= "0.02"
-          material="color: white; shader: flat">
+          material="color: black; shader: flat">
         </a-ring>
       </a-camera>
       
