--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -17,13 +17,13 @@
 
       <a-camera>
         <a-entity id="mouseCursor"
-          cursor="fuse: true; fuseTimeout: 1000">
+          cursor="fuse: true; fuseTimeout: 5000">
         </a-entity>
         <a-ring id="cursorRing" 
           position="0 0 -1"
           radius-inner= "0.01"
           radius-outer= "0.02"
-          material="color: white; shader: flat">
+          material="color: black; shader: flat">
         </a-ring>
       </a-camera>
       
